Reset PS/2 devices before probing as synaptics touchpad.

Patch from dukscry, fixes #8616.